# bt-workflow-engine

./: .gitignore  README.md  app_ui.py  config.py  main.py  pyproject.toml  requirements.txt
bt_engine/: __init__.py  audit.py  behaviour_tree.py  nodes.py  runner.py
bt_engine/compiler/: __init__.py  condition_parser.py  ingestion.py  llm_utils.py  parser.py  schemas.py  step_compilers.py  tool_registry.py  tree_manager.py
bt_engine/trees/: __init__.py  complaint.py  fraud_triage.py  refund.py
database/: __init__.py  db.py  seed.py
docs/: bt-architecture-diagrams.md  compiler.md
docs/plans/: 2026-03-05-conversational-bt-architecture-design.md  2026-03-05-conversational-bt-implementation-plan.md
examples/: ingest_demo.py  sample_sop.txt
procedures/: customer_service_complaint.yaml  customer_service_refund.yaml  customer_service_refund_finegrained.yaml  fraud_ops_alert_triage.yaml
tests/: conftest.py  test_bt_audit.py  test_bt_nodes.py  test_bt_runner.py  test_compiler.py  test_constrained.py  test_database.py  test_ingestion.py  test_schemas.py  test_tools.py  test_tree_equivalence.py
tools/: __init__.py  common_tools.py  crm_tools.py  fraud_tools.py
